# context.Orion-LD

./: CHANGES_NEXT_RELEASE  CMakeLists.txt  README.md  makefile
.github/workflows/: functional.yml
docker/build-ubi/: 04.install-fastdds.sh  install-gnutls.sh  install-mongoc-driver.sh
scripts/: check_files_compliance.py  requirements.txt
signatures/version1/: cla.json
src/app/orionld/: CMakeLists.txt  orionld.cpp
src/lib/logMsg/: traceLevels.h
src/lib/orionld/common/: orionldState.cpp  orionldState.h  traceLevels.h
src/lib/orionld/dds/: CMakeLists.txt  DdsNotificationReceiver.cpp  DdsNotificationReceiver.h  DdsNotificationSender.cpp  DdsNotificationSender.h  NgsildEntity.cxx  NgsildEntity.h  NgsildEntity.hpp  NgsildEntity.idl  NgsildEntityCdrAux.hpp  NgsildEntityCdrAux.ipp  (+27 more)
src/lib/orionld/dds/ddsModule/ddsenabler_yaml/: CMakeLists.txt  README.md  package.xml  project_settings.cmake
src/lib/orionld/dds/ddsModule/ddsenabler_yaml/include/: EnablerConfiguration.hpp  yaml_configuration_tags.hpp
src/lib/orionld/dds/ddsModule/ddsenabler_yaml/src/cpp/: EnablerConfiguration.cpp
src/lib/orionld/dds/ddsModule/ddsenabler_yaml/test/: CMakeLists.txt  DdsEnablerYamlTest.cpp
src/lib/rest/: rest.cpp
test/functionalTest/: harnessFunctions.sh  testHarness.sh
test/functionalTest/ftClient/: CMakeLists.txt  deleteDdsDump.cpp  ftClient.cpp  getDump.cpp  mhdInit.cpp  mhdInit.h  mhdRequestEnded.cpp  mhdRequestEnded.h  mhdRequestInit.cpp  mhdRequestInit.h  mhdRequestTreat.cpp  mhdRequestTreat.h  postDdsPub.cpp  postDdsSub.cpp
test/unittests/: main_UnitTest.cpp
(+121 files in other folders)
