<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ddsenabler_yaml</name>
  <version>0.1.0</version>
  <description>
     *eprosima DDS Enabler* Yaml Module is a C++ implementation to read and parse YAML configuration files.
  </description>
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="adriancampo@eprosima.com">Adrián del Campo</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>yamlcpp</depend>
  <depend>cpp_utils</depend>
  <depend>ddspipe_core</depend>
  <depend>ddspipe_yaml</depend>
  <depend>ddsenabler_participants</depend>
  <depend>cmake_utils</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>googletest-distribution</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
